$Id$

2020-11-09  Christian Franke  <franke@computer.org>

	smartd.cpp: Resolve symlinks before device names are checked for
	duplicates (#1390).
	dev_interface.cpp, dev_interface.h: Add 'get_unique_dev_name()'
	and 'is_raid_dev_type()' to support platform specific modifications.
	smartd.conf.5.in: Document new functionality.

2020-11-07  Christian Franke  <franke@computer.org>

	json.cpp, json.h: Add YAML support.
	smartctl.cpp: Add '--json=y' option.
	smartctl.8.in: Document new option.

	smartctl.8.in, smartd.conf.5.in: Remove EXPERIMENTAL notes for
	features added before 7.0.
	update-smart-drivedb.8.in: Add missing EXPERIMENTAL note.

2020-11-01  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Phison Driven SSDs: KINGSTON OM4P0S3* (#1374), OMSP0S3* (#1375).
	- InnoDisk iCF 9000 / 1SE2 Cards: Rename entry. Add 1SE2 H (#1351).
	- Marvell based SanDisk SSDs: 2TB SDSSDH3 (GH issues/67, GH pull/69),
	  WD Blue SSD WDS100T2B0A (#1378).
	- SanDisk based SSDs: SDSA6GM*.
	- Toshiba 2.5" HDD MK..76GSX/GS001A (GH pull/58).
	- Toshiba L200 (CMR), Toshiba L200 (SMR) (#1228, patch from #1377).
	- Western Digital Blue: Apple OEM (#1385).
	- Western Digital Scorpio Blue Serial ATA: 320 GB (patch from #888).

	os_win32.cpp: Decode Windows 10 20H2 and Server 2004, 20H2
	build numbers.

2020-10-29  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: skip SCSI subenclosure devices on scan (#1299)

2020-10-24  Christian Franke  <franke@computer.org>

	drivedb.h:
	- HGST Travelstar Z5K1000: *B*610 variant.
	- Hitachi Travelstar 7K320: HITACHI*SA60 variant (#983).
	- Hitachi/HGST Deskstar 5K4000: Rename entry. Add HGST (#1060).
	- HGST Deskstar NAS: 8TB.
	- Hitachi/HGST Ultrastar 5K3000 (#1055).
	- Hitachi Ultrastar 7K3000: Variant without vendor name (#1361).
	- Hitachi/HGST Ultrastar 7K4000: Variant without vendor name (#1361).
	- HGST Ultrastar HC310/320 (#1157, #1365).

2020-10-19  Christian Franke  <franke@computer.org>

	drivedb.h: